Fix: replaced font families and adjusted some other alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,7 @@ body {
 }
 
 :root {
-  --font1: "Poppins", sans-serif;
-  --headfont: "Nunito Sans", sans-serif;
+  --font1: "General Sans", sans-serif;
   --beige: rgb(225, 225, 219);
   --text-color1: #3d3a36;
   --text-color2: #7b756e;
@@ -22,6 +21,9 @@ body {
 @font-face {
   font-family: "Gilroy";
   src: url("/css/fonts/gilroy/Gilroy-Medium.ttf") format("ttf");
+
+  font-family: "cabinet-grotesk";
+  src: url(/css/fonts/cabinet-grotesk/Fonts/OTF/CabinetGrotesk-Extrabold.otf);
 }
 
 .page-1 {
@@ -39,9 +41,10 @@ body {
 }
 
 .main-content h1 {
-  font-size: 5.75em;
-  font-family: var(--headfont);
-  -webkit-text-stroke: 4px;
+  font-size: 5.65em;
+  font-family: "cabinet-grotesk", sans-serif;
+  font-weight: 800;
+  -webkit-text-stroke: 2px;
   letter-spacing: 3px;
 }
 
@@ -74,7 +77,7 @@ body {
   color: var(--text-color2);
   width: 35%;
   text-align: center;
-  -webkit-text-stroke: 0.3px;
+  -webkit-text-stroke: 1px;
   letter-spacing: 0.3px;
 }
 
@@ -102,11 +105,11 @@ body {
 }
 
 .overlay-text h1 {
-  font-family: var(--headfont);
-  -webkit-text-stroke: 2px;
+  font-family: var(--font1);
+  -webkit-text-stroke: 1.2px;
   padding-top: 5px;
-  letter-spacing: 2px;
-  font-size: 2.5em;
+  letter-spacing: 3.2px;
+  font-size: 2.8em;
 }
 
 .overlay-name {
@@ -152,6 +155,7 @@ ul {
   height: 100vh;
   width: 100%;
   background-color: black;
+  border-radius: 30px;
 }
 
 .cursor {
@@ -175,6 +179,7 @@ ul {
   overflow-x: auto;
   overflow-y: hidden;
   position: relative;
+  top: 100px;
 }
 
 #scroll {
